@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-22T08:12:28Z",
+  "timestamp" : "2024-05-22T16:11:51Z",
   "count_outdated" : 7677,
   "uniques_outdated" : 3333,
-  "count" : 7786,
+  "count" : 7787,
   "uniques" : 3411,
   "clones" : [
     {
@@ -124,9 +124,9 @@
     },
     {
       "timestamp": "2024-05-22T00:00:00Z",
-      "count": 16,
-      "count_minmax": [ 16, 16 ],
-      "count_decinc": [ 0, 16 ],
+      "count": 17,
+      "count_minmax": [ 16, 17 ],
+      "count_decinc": [ 0, 17 ],
       "uniques": 9,
       "uniques_minmax": [ 9, 9 ],
       "uniques_decinc": [ 0, 9 ]
